--- a/ml/main.ipynb
+++ b/ml/main.ipynb
@@ -18,107 +18,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting ru-core-news-lg==3.8.0\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/ru_core_news_lg-3.8.0/ru_core_news_lg-3.8.0-py3-none-any.whl (513.4 MB)\n",
-      "     ---------------------------------------- 0.0/513.4 MB ? eta -:--:--\n",
-      "     ---------------------------------------- 0.3/513.4 MB ? eta -:--:--\n",
-      "     ---------------------------------------- 1.3/513.4 MB 4.2 MB/s eta 0:02:03\n",
-      "     ---------------------------------------- 2.4/513.4 MB 4.6 MB/s eta 0:01:51\n",
-      "     ---------------------------------------- 3.9/513.4 MB 5.5 MB/s eta 0:01:34\n",
-      "     ---------------------------------------- 5.8/513.4 MB 6.2 MB/s eta 0:01:23\n",
-      "      --------------------------------------- 7.9/513.4 MB 7.1 MB/s eta 0:01:12\n",
-      "      -------------------------------------- 10.2/513.4 MB 7.8 MB/s eta 0:01:05\n",
-      "     - ------------------------------------- 13.4/513.4 MB 8.8 MB/s eta 0:00:57\n",
-      "     - ------------------------------------- 16.8/513.4 MB 9.8 MB/s eta 0:00:51\n",
-      "     - ------------------------------------ 21.2/513.4 MB 11.1 MB/s eta 0:00:45\n",
-      "     - ------------------------------------ 26.2/513.4 MB 12.3 MB/s eta 0:00:40\n",
-      "     -- ----------------------------------- 32.5/513.4 MB 13.9 MB/s eta 0:00:35\n",
-      "     -- ----------------------------------- 39.3/513.4 MB 15.3 MB/s eta 0:00:31\n",
-      "     --- ---------------------------------- 46.4/513.4 MB 16.8 MB/s eta 0:00:28\n",
-      "     ---- --------------------------------- 55.1/513.4 MB 18.6 MB/s eta 0:00:25\n",
-      "     ---- --------------------------------- 61.6/513.4 MB 19.4 MB/s eta 0:00:24\n",
-      "     ----- -------------------------------- 68.7/513.4 MB 20.4 MB/s eta 0:00:22\n",
-      "     ----- -------------------------------- 75.5/513.4 MB 21.1 MB/s eta 0:00:21\n",
-      "     ------ ------------------------------- 82.8/513.4 MB 21.8 MB/s eta 0:00:20\n",
-      "     ------ ------------------------------- 91.8/513.4 MB 22.9 MB/s eta 0:00:19\n",
-      "     ------- ------------------------------ 99.9/513.4 MB 23.7 MB/s eta 0:00:18\n",
-      "     ------- ----------------------------- 106.7/513.4 MB 24.1 MB/s eta 0:00:17\n",
-      "     -------- ---------------------------- 115.6/513.4 MB 24.9 MB/s eta 0:00:17\n",
-      "     -------- ---------------------------- 123.2/513.4 MB 25.4 MB/s eta 0:00:16\n",
-      "     --------- --------------------------- 131.3/513.4 MB 26.0 MB/s eta 0:00:15\n",
-      "     ---------- -------------------------- 139.5/513.4 MB 26.5 MB/s eta 0:00:15\n",
-      "     ---------- -------------------------- 147.1/513.4 MB 26.9 MB/s eta 0:00:14\n",
-      "     ----------- ------------------------- 155.5/513.4 MB 27.4 MB/s eta 0:00:14\n",
-      "     ----------- ------------------------- 164.9/513.4 MB 28.0 MB/s eta 0:00:13\n",
-      "     ------------ ------------------------ 173.0/513.4 MB 28.4 MB/s eta 0:00:12\n",
-      "     ------------- ----------------------- 183.2/513.4 MB 29.1 MB/s eta 0:00:12\n",
-      "     -------------- ---------------------- 195.3/513.4 MB 29.9 MB/s eta 0:00:11\n",
-      "     -------------- ---------------------- 205.3/513.4 MB 30.6 MB/s eta 0:00:11\n",
-      "     --------------- --------------------- 216.0/513.4 MB 31.2 MB/s eta 0:00:10\n",
-      "     ---------------- -------------------- 226.2/513.4 MB 31.7 MB/s eta 0:00:10\n",
-      "     ----------------- ------------------- 237.0/513.4 MB 32.3 MB/s eta 0:00:09\n",
-      "     ----------------- ------------------- 249.0/513.4 MB 33.0 MB/s eta 0:00:09\n",
-      "     ------------------ ------------------ 259.3/513.4 MB 33.5 MB/s eta 0:00:08\n",
-      "     ------------------- ----------------- 270.0/513.4 MB 38.4 MB/s eta 0:00:07\n",
-      "     -------------------- ---------------- 280.2/513.4 MB 41.1 MB/s eta 0:00:06\n",
-      "     -------------------- ---------------- 291.2/513.4 MB 42.8 MB/s eta 0:00:06\n",
-      "     --------------------- --------------- 298.8/513.4 MB 43.2 MB/s eta 0:00:05\n",
-      "     ---------------------- -------------- 309.9/513.4 MB 44.0 MB/s eta 0:00:05\n",
-      "     ----------------------- ------------- 320.3/513.4 MB 44.6 MB/s eta 0:00:05\n",
-      "     ----------------------- ------------- 329.8/513.4 MB 45.1 MB/s eta 0:00:05\n",
-      "     ------------------------ ------------ 340.5/513.4 MB 45.9 MB/s eta 0:00:04\n",
-      "     ------------------------- ----------- 351.8/513.4 MB 46.7 MB/s eta 0:00:04\n",
-      "     -------------------------- ---------- 362.3/513.4 MB 47.2 MB/s eta 0:00:04\n",
-      "     -------------------------- ---------- 373.0/513.4 MB 48.3 MB/s eta 0:00:03\n",
-      "     --------------------------- --------- 384.8/513.4 MB 49.0 MB/s eta 0:00:03\n",
-      "     ---------------------------- -------- 396.9/513.4 MB 49.9 MB/s eta 0:00:03\n",
-      "     ----------------------------- ------- 408.9/513.4 MB 51.1 MB/s eta 0:00:03\n",
-      "     ------------------------------ ------ 420.0/513.4 MB 51.7 MB/s eta 0:00:02\n",
-      "     ------------------------------ ------ 428.9/513.4 MB 52.1 MB/s eta 0:00:02\n",
-      "     ------------------------------- ----- 438.3/513.4 MB 52.1 MB/s eta 0:00:02\n",
-      "     -------------------------------- ---- 449.6/513.4 MB 52.5 MB/s eta 0:00:02\n",
-      "     --------------------------------- --- 459.3/513.4 MB 52.4 MB/s eta 0:00:02\n",
-      "     --------------------------------- --- 470.5/513.4 MB 52.4 MB/s eta 0:00:01\n",
-      "     ---------------------------------- -- 482.9/513.4 MB 52.5 MB/s eta 0:00:01\n",
-      "     ----------------------------------- - 494.4/513.4 MB 52.7 MB/s eta 0:00:01\n",
-      "     ------------------------------------  505.9/513.4 MB 52.5 MB/s eta 0:00:01\n",
-      "     ------------------------------------  513.3/513.4 MB 52.7 MB/s eta 0:00:01\n",
-      "     ------------------------------------  513.3/513.4 MB 52.7 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 513.4/513.4 MB 48.4 MB/s  0:00:13\n",
-      "Requirement already satisfied: pymorphy3>=1.0.0 in c:\\users\\me\\dev\\python\\x5case\\ml\\.venv\\lib\\site-packages (from ru-core-news-lg==3.8.0) (2.0.4)\n",
-      "Requirement already satisfied: dawg2-python>=0.8.0 in c:\\users\\me\\dev\\python\\x5case\\ml\\.venv\\lib\\site-packages (from pymorphy3>=1.0.0->ru-core-news-lg==3.8.0) (0.9.0)\n",
-      "Requirement already satisfied: pymorphy3-dicts-ru in c:\\users\\me\\dev\\python\\x5case\\ml\\.venv\\lib\\site-packages (from pymorphy3>=1.0.0->ru-core-news-lg==3.8.0) (2.4.417150.4580142)\n",
-      "Requirement already satisfied: setuptools>=68.2.2 in c:\\users\\me\\dev\\python\\x5case\\ml\\.venv\\lib\\site-packages (from pymorphy3>=1.0.0->ru-core-news-lg==3.8.0) (70.2.0)\n",
-      "Installing collected packages: ru-core-news-lg\n",
-      "Successfully installed ru-core-news-lg-3.8.0\n",
-      "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
-      "You can now load the package via spacy.load('ru_core_news_lg')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!uv run spacy download ru_core_news_lg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\me\\Dev\\Python\\X5Case\\ml\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "nlp = spacy.load(\"ru_core_news_lg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +54,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
